@@ -15,6 +15,8 @@
             jslTokenAsString now works for 'of'
             Speed up Array.prototype.join (fix #1660)
             Allow 'in' to be used with typed arrays (fix #1534)
+            Fix global regex issues when match may be 0 chars (fix #1888) (fix #1889)
+            Improve String.replace performance using iterator rather than repeated copy
 
      2v06 : Allow `"ram"` keyword at the top of a function to allow it to be pretokenised and loaded to RAM
             Don't store line numbers for pretokenised functions
